--- a/base.ipynb
+++ b/base.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,12 +212,12 @@
     "def embeds_list_similarity(emb1, emb2):\n",
     "    emb1, emb2 = np.array(emb1), np.array(emb2)\n",
     "\n",
-    "    return np.mean(_mean_similarity(emb1, emb2)) / 2 + np.mean(_mean_similarity(emb2, emb1)) / 2"
+    "    return np.mean(_mean_similarity(emb1, emb2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "0.7159892408609391"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,13 +253,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfbf38f2e1684df9b6729b994bb36603",
+       "model_id": "daad31830c484f24bb1bfe51e92bb551",
        "version_major": 2,
        "version_minor": 0
       },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        " <BarContainer object of 20 artists>)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "(12000, 70000)"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,13 +335,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58ce7e573d0f4e9a84d0ba0fe32e2bec",
+       "model_id": "83458513bda34362ba66ab1ebfe698f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        " <BarContainer object of 20 artists>)"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     },
