remove excess np.mean

--- a/base.ipynb
+++ b/base.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.12/site-packages/albumentations/__init__.py:13: UserWarning: A new version of Albumentations is available: 1.4.18 (you have 1.4.14). Upgrade using: pip install -U albumentations. To disable automatic update checks, set the environment variable NO_ALBUMENTATIONS_UPDATE to 1.\n",
+      "  check_for_updates()\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -248,7 +257,7 @@
     "def embeds_list_similarity(emb1, emb2):\n",
     "    emb1, emb2 = np.array(emb1), np.array(emb2)\n",
     "\n",
-    "    return np.mean(_mean_similarity(emb1, emb2))"
+    "    return _mean_similarity(emb1, emb2)"
    ]
   },
   {
@@ -295,7 +304,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4dffbd1f2274d8a98fc7f43f1090a5d",
+       "model_id": "162bf303d7e44ae0913c6df6743e5ed9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +331,7 @@
        "<Axes: ylabel='Count'>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -370,7 +379,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67a3f8c629bd40108b36a710250e34c0",
+       "model_id": "fb7192cd422e4cc09a78b6487fdb33db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -388,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +406,7 @@
        "<Axes: ylabel='Count'>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -424,7 +433,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9639966c39a544bb97bc1d7dd5e2665d",
+       "model_id": "140020a60a6c44709942a4cf96b2b1b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -442,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +460,7 @@
        "<Axes: ylabel='Count'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -472,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +490,7 @@
        "<Axes: ylabel='Count'>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -504,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +522,7 @@
        "(0.65, 0.77)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -547,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +565,7 @@
        "(0.65, 0.77)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -586,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
