--- a/base.ipynb
+++ b/base.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/albumentations/__init__.py:13: UserWarning: A new version of Albumentations is available: 1.4.18 (you have 1.4.14). Upgrade using: pip install -U albumentations. To disable automatic update checks, set the environment variable NO_ALBUMENTATIONS_UPDATE to 1.\n",
-      "  check_for_updates()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -106,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "70000"
+       "0"
       ]
      },
      "execution_count": 4,
@@ -207,18 +198,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([10, 512])"
+       "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(my_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "torch.cat(): expected a non-empty list of Tensors",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m get_embeds_example(my_dataset, extractor, \u001b[38;5;241m10\u001b[39m)\u001b[38;5;241m.\u001b[39mshape\n",
+      "Cell \u001b[1;32mIn[7], line 11\u001b[0m, in \u001b[0;36mget_embeds_example\u001b[1;34m(dataset, extractor, subsample_size, random_seed)\u001b[0m\n\u001b[0;32m      8\u001b[0m idxs \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mchoice(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(dataset)), subsample_size, replace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m      9\u001b[0m subset \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mSubset(dataset, idxs)\n\u001b[1;32m---> 11\u001b[0m embeds \u001b[38;5;241m=\u001b[39m extractor\u001b[38;5;241m.\u001b[39mget_embedings(subset)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m embeds\n",
+      "Cell \u001b[1;32mIn[5], line 32\u001b[0m, in \u001b[0;36mEmbeddingsExtractor.get_embedings\u001b[1;34m(self, dataset)\u001b[0m\n\u001b[0;32m     30\u001b[0m         outputs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m(batch)\n\u001b[0;32m     31\u001b[0m         embeds\u001b[38;5;241m.\u001b[39mappend(outputs)\n\u001b[1;32m---> 32\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mcat(embeds)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: torch.cat(): expected a non-empty list of Tensors"
+     ]
     }
    ],
    "source": [
@@ -539,9 +553,9 @@
    ],
    "source": [
     "to_plot = pd.DataFrame({\n",
-    "    'splitted dataset': similarities_list,\n",
-    "    'different datasets 1': similarities_test_list_1,\n",
-    "    'different datasets 2': similarities_test_list_2,\n",
+    "    'splitted dataset (D1_1, D1_2)': similarities_list,\n",
+    "    'different datasets (D1_1, D2)': similarities_test_list_1,\n",
+    "    'different datasets (D1_2, D2)': similarities_test_list_2,\n",
     "})\n",
     "\n",
     "# sns.kdeplot(similarities_list,        color='g', fill=True, alpha=0.1)\n",
@@ -582,9 +596,9 @@
    ],
    "source": [
     "to_plot = pd.DataFrame({\n",
-    "    'splitted dataset': similarities_list,\n",
-    "    'different datasets 1': similarities_test_list_1,\n",
-    "    'different datasets 2': similarities_test_list_2,\n",
+    "    'splitted dataset (D1_1, D1_2)': similarities_list,\n",
+    "    'different datasets (D1_1, D2)': similarities_test_list_1,\n",
+    "    'different datasets (D1_2, D2)': similarities_test_list_2,\n",
     "})\n",
     "\n",
     "plt.figure(figsize=(10,2))\n",
@@ -668,18 +682,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.4"
   }
  },
  "nbformat": 4,
